Fixed header, footer and hero css alignment.

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -93,9 +93,9 @@
 
 .inner {
     display: inline-block;
-    letter-spacing: -4px;
+    /* letter-spacing: -4px; */
     vertical-align: top;
-    margin: 30px 110px;
+    /* margin: 30px 110px; */
     line-height: 60px;
     color: skyblue;
     font-size: 0;
